[package]
name = "fim"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
crossterm = "0.29"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
bon = "3.7"

[[bin]]
name = "fim"
path = "src/main.rs"

# [dev-dependencies]
# criterion = { version = "0.7", features = ["html_reports"] }

# [[bench]]
# name = "reader_performance"
# harness = false
